crates/toml_edit/tests/snapshots/invalid/string/multiline-escape-space-02.stderr
TOML parse error at line 4, column 9
  |
4 | gee \   """
  |         ^
invalid multi-line basic string, expected newline
